# processFaaData

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  Sample SQL queries.sql  addIndexes.sql  add_indexes.sql  clean.sh  cpanfile  create_databases.sh  freshen_local_nasr.sh  freshen_local_nasr_old.sh  geometryProcessors.pm  get_current_nasr_url.py  hash_of_expanders.pl  hash_of_geometry_creators.pl  hash_of_normalizers.pl  hash_of_parsers.pl  main.py  normalizingProcessors.pm  parseAll.pl  parseAllSetup.sh  parseNasr.pl  parse_nasr.pl  processFaaData.pm  pyproject.toml  recursiveUnzip.sh  setup.sh  sqliteToSpatialite.sql  sqlite_to_spatialite.sql  start.sh  textExpanders.pm
docs/: index.md  mkdocs.yaml
modules/: DOFHandler.py  DatabaseHandler.py  Expanders.py  FileDefinitions.py  FileHandler.py  GeometryProcessors.py  Helpers.py  LineParser.py  NASRHandler.py  Normalizers.py  ZipHandler.py
sql/: sqlite_to_spatialite.sql
src/faa_nasr/: __init__.py  _log.py  airspace.py  cifp.py  cifp_records.py  cli.py  coords.py  edai.py  fetch.py  geometry.py  mirror.py  tables.py  tfr.py  weather.py
tests/: test_airspace_helpers.py  test_airspace_io.py  test_airspace_orchestrators.py  test_airspace_pyogrio_mocked.py  test_cifp_coords.py  test_cifp_fields.py  test_cifp_parse.py  test_cli.py  test_coords.py  test_edai.py  test_fetch.py  test_geometry_helpers.py  test_geometry_loader.py  test_init_spatialite_db.py  test_log.py  test_merge_chunks.py  test_mirror.py  test_tables.py  test_tables_helpers.py  test_tfr.py  test_weather.py  test_xlinks.py
