[project]
name = "faa-nasr"
version = "0.1.0"
description = "Build SQLite/SpatiaLite databases from the FAA's 28-day NASR CSV subscription"
readme = "README.md"
authors = [
    { name = "jlmcgraw", email = "jlmcgraw@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pyogrio>=0.9",
    "tqdm>=4.66",
]

[project.scripts]
nasr = "faa_nasr.cli:app"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
