[project]
name = "faa-nasr"
version = "0.1.0"
description = "Build SQLite/SpatiaLite databases from the FAA's 28-day NASR CSV subscription"
readme = "README.md"
authors = [
    { name = "jlmcgraw", email = "jlmcgraw@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pyogrio>=0.9",
    "tqdm>=4.66",
]

[project.scripts]
nasr = "faa_nasr.cli:app"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.20",
    "mkdocs>=1.6",
    "mypy>=1.10",
    "pyclean>=3.0",
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "types-tqdm>=4.66",
    "typos>=1.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's idiomatic API uses typer.Option(...) / typer.Argument(...) as
# argument defaults; ruff's bugbear B008 rule flags this but it's correct.
"src/faa_nasr/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
# pyogrio doesn't ship a py.typed marker, so mypy can't see its types.
module = ["pyogrio", "pyogrio.*"]
ignore_missing_imports = true

[tool.basedpyright]
# basedpyright defaults to its own "all" mode -- much stricter than pyright's
# strict and noisy for a project that uses untyped scientific libs (numpy
# object-dtype arrays, pyogrio without py.typed). "standard" matches what
# pyright defaults to, which is still rigorous but ergonomic.
typeCheckingMode = "standard"
reportMissingTypeStubs = false  # pyogrio doesn't ship a py.typed
include = ["src", "tests"]

[[tool.basedpyright.executionEnvironments]]
# Tests legitimately access _underscore_prefixed helpers from the package.
root = "tests"
reportPrivateUsage = false
